--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -30,13 +27,12 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-
-    - uses: awact/s3-action@master
-      with:
-        args: --acl public-read --follow-symlinks --delete
+    # AWS S3 Sync
+    - name: Deploy to S3
       env:
-        SOURCE_DIR: './build'
         AWS_REGION: 'ap-southeast-2'
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        aws s3 sync ./build s3://$AWS_S3_BUCKET --acl public-read --follow-symlinks --delete
