--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,11 +28,12 @@ jobs:
     - run: npm test
 
     # AWS S3 Sync
-    - name: Deploy to S3
+   - name: Deploy to S3
       env:
         AWS_REGION: 'ap-southeast-2'
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        aws s3 sync ./build s3://$AWS_S3_BUCKET --acl public-read --follow-symlinks --delete
+        aws s3 sync ./build s3://$AWS_S3_BUCKET --follow-symlinks --delete
+
