--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,3 +1,5 @@
+
+
 name: Node.js CI
 
 on:
@@ -27,13 +29,13 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-    # AWS S3 Sync
-   - name: Deploy to S3
+
+    - uses: awact/s3-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
       env:
+        SOURCE_DIR: './build'
         AWS_REGION: 'ap-southeast-2'
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        aws s3 sync ./build s3://$AWS_S3_BUCKET --follow-symlinks --delete
-
